# docker-stack

./: .env.dist  .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.circleci/: config.yml  workflow.yml
.circleci_off/: config.yml
.github/: workflows 
.github/workflows/: dctl_cli.yml  test_dctl_cli.yml
cli/: CLAUDE.md  Cargo.toml  tarpaulin.toml
cli/src/: cli.rs  command.rs  docker.rs  main.rs  parser.rs  system.rs
cli/src/command/: args.rs  build.rs  cd.rs  completion.rs  config.rs  create.rs  definitions.rs  definitions_tests.rs  docker.rs  docker_tests.rs  down.rs  events.rs  exec.rs  images.rs  infos.rs  kill.rs  list.rs  logs.rs  ls.rs  pause.rs  port.rs  ps.rs  pull.rs  push.rs  register.rs  registry.rs  restart.rs  rm.rs  run.rs  start.rs  stop.rs  system.rs  system_tests.rs  top.rs  unpause.rs  unregister.rs  up.rs  watch.rs
cli/src/docker/: command.rs  docker.rs  docker_tests.rs  mod.rs  tests.rs
cli/src/parser/: config.rs  mod.rs  parser_tests.rs  tests.rs
cli/src/system/: command.rs  mod.rs  system.rs  system_tests.rs  tests.rs
cli/src/utils/: docker.rs  docker_tests.rs  system.rs  system_tests.rs
cli/tests/: bad_config.toml  valid_config.toml
collection/: .env.dist  CLAUDE.md
collection/data/: docker-compose.yml.dist
collection/logging/: docker-compose.yml.dist
collection/logging/docker/loki/: loki-local-config.yaml  loki-local-config.yaml.dist
collection/logging/docker/promtail/: config.yml.dist
collection/tools/: docker-compose.yml.dist
collection/web/: docker-compose.yml.dist
doc/: collection.md  dctl.md
