[package]
name = "dctl"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "process"] }
async-trait = { version = "0.1.89" }
anyhow = { version = "1.0" }
clap = { version = "4.5.53", features = ["cargo"] }
clap_complete = { version = "4.5.62" }
toml = { version =  "0.9.8" }
dotenv = { version = "0.15.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.146" }
shellexpand = { version = "3.1.1" }
tabled = { version = "0.20.0" }
mockall = { version = "0.14.0" }
version = { version = "3.0.0" }

[profile.release]
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "debuginfo"